Cart on Appbar done

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,14 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.caret::after {
+  display: inline-block;
+  margin-left: 0.3rem;
+  vertical-align: 0.1rem;
+  content: "";
+  border-top: 0.275rem solid;
+  border-right: 0.275rem solid transparent;
+  border-bottom: 0;
+  border-left: 0.275rem solid transparent;
+}
