--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,3 +29,16 @@ a {
   border-bottom: 0;
   border-left: 0.275rem solid transparent;
 }
+
+.caret-r::after {
+  display: inline-block;
+  margin-left: 0.3rem;
+  vertical-align: 0.1rem;
+  content: "";
+  width: 0px;
+  height: 0px;
+  border-top: 0.275rem solid transparent;
+  /* border-right: 0.275rem solid; */
+  border-bottom: 0.275rem solid transparent;
+  border-left: 0.275rem solid;
+}
