--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,6 +36,7 @@ body {
   margin: 0;
   font-family: "Rubik", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  overflow-x: hidden;
 }
 
 a {
