--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,7 +36,13 @@ body {
   margin: 0;
   font-family: "Rubik", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
+}
+
+@media only screen and (min-width: 1280px) {
+  body {
+    overflow-x: hidden;
+  }
 }
 
 a {
