--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -61,3 +61,6 @@ a {
 .flex-center {
   @apply flex justify-center items-center;
 }
+.primary-btn {
+  @apply bg-primary text-white rounded-md shadow-lg hover:shadow-none hover:bg-red-500 duration-300;
+}
