--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -64,3 +64,15 @@ a {
 .primary-btn {
   @apply bg-primary text-white rounded-md shadow-lg hover:shadow-none hover:bg-red-500 duration-300;
 }
+
+.primary-btn-outline {
+  @apply flex-center w-full border border-primary text-primary py-2 hover:bg-primary hover:text-white duration-300 rounded-md cursor-pointer;
+}
+
+.primary-link {
+  @apply font-medium text-black hover:text-primary cursor-pointer duration-300;
+}
+
+.primary-input {
+  @apply border w-full outline-none p-3 focus:border-primary rounded-md duration-300;
+}
